--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,3 +4,4 @@
 
 <%= link_to 'Show', @product %> |
 <%= link_to 'Back', products_path %>
+<%= link_to 'Search Product', products_search_product_path %>
