--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :dni %>
   </div>
 
+  <div class="field">
+    <%= form.label :iris %>
+    <%= form.file_field :iris %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
