--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :password %>
+    <%= form.text_field :password %>
+  </div>
+
+  <div class="field">
     <%= form.label :dni %>
     <%= form.text_field :dni %>
   </div>
