--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,4 +30,6 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path %><br>
+<%= link_to 'Search User By Iris', users_search_by_iris_path %><br>
+<%= link_to 'Search User By DNI', users_search_by_dni_path %>
